Naive implementation for indexing process using SOLR Api